<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kellyjohanazapataestrada.practica5.RegistroActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoregister3"
        android:layout_weight="2.22">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:weightSum="1">
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUser"
                android:hint="@string/txtUser"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="right" />
                <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:hint="@string/txtPass2"
                android:textStyle="bold"
                android:id="@+id/txtPass"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:hint="@string/txtRePass"
                android:textStyle="bold"
                android:id="@+id/txtRePass"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/txtEmail"
                android:textStyle="bold"
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:layout_gravity="right" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSign"
                android:id="@+id/btnSign"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/blue"
                android:layout_weight="0.15"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
