<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kellyjohanazapataestrada.practica6.LogginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoperfil2"
        android:layout_weight="2.22">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/perfilphoto" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtUserRegister"
                android:hint="@string/txtUserRegister"
                android:textAlignment="center"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtLogin2"
                android:hint="@string/txtLogin2"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtPassRegister"
                android:hint="@string/txtPassRegister"
                android:textAlignment="center"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtPass2"
                android:hint="@string/txtPass2"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtEmailRegister"
                android:hint="@string/txtEmailRegister"
                android:textAlignment="center"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/txtEmail2"
                android:hint="@string/txtEmail2"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_gravity="right" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
